# cmake_template

./: CMakeLists.txt  README.md  build.bat
